# torch-inr

./: README.md  pyproject.toml
.github/workflows/: linting.yml  tests.yml
src/torch_inr/: __init__.py  coords.py  encoders.py  layers.py  samplers.py
tests/: test_activations.py  test_coords.py  test_encoders.py  test_integration.py  test_samplers.py
